# quangpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
quangpy/: __init__.py  joint_scale.py  utils.py  var_decomp.py  wls.py
